[package]
name = "debug-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.164", features = [ "derive" ]}
serde_json = "1.0.96"
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2.86" }

[dev-dependencies]
serde = { version = "1.0.164", features = [ "derive" ]}
serde_json = "1.0.96"
criterion = "0.3"

[[bench]]
name = "worktable"
harness = false
